public interface NavegadorInternet {

    void exibirPagina(String url);
    void atualizarPagina();
    void adicionarNovaAba();

}
